syntax = "proto3";
package vire.cms;

import "vire/utility/BaseRequest.proto";

message ResourceBaseRequest {

  vire.utility.BaseRequest _base = 1;

  string path = 100; // Resource path

}